--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
+    "@angular/animations": "^6.1.8",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
@@ -22,10 +22,14 @@
     "@angular/pwa": "^0.8.3",
     "@angular/router": "^6.0.0",
     "@angular/service-worker": "^6.0.0",
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-toastr": "^9.1.0",
     "rxjs": "^6.0.0",
+    "sweetalert2": "^7.28.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
